--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,21 @@ body {
   width: 100%;
   background: rgba(0, 0, 0, 0.3);
 }
+
+.button-container {
+  display: flex;
+  gap: 10px;
+  margin-top: 2rem;
+  justify-content: center;
+}
+
+button {
+  padding: 8px 15px;
+  outline: none;
+  border: none;
+  background: black;
+  cursor: pointer;
+  transition: all 300ms ease;
+  color: white;
+  border-radius: 5px;
+}
